Fix font size on mobile

--- a/programming_language/c_plus_plus/css/c_plus_plus.css
+++ b/programming_language/c_plus_plus/css/c_plus_plus.css
@@ -237,7 +237,7 @@ html, body{
 @media (max-width: 600px) {
 
   #modal3 h1{
-    font-size: 95% !important;
+    font-size: 120% !important;
   }
 }
 
